--- a/exampleSite/content/post/主机管理指南.md
+++ b/exampleSite/content/post/主机管理指南.md
@@ -5,6 +5,14 @@ date: 2020-09-11
 description: Some basic skills to manage linux servers
 math: true
 ---
+tags = [
+    "vps",
+    "bash",
+]
+categories = [
+    "vps",
+    "linux",
+]
 <!--more-->
 # 主机管理指南
 
