--- a/exampleSite/content/post/主机管理指南.md
+++ b/exampleSite/content/post/主机管理指南.md
@@ -1,9 +1,8 @@
 +++
-author: Will
-title: VPS Management Guides
-date: 2020-09-11
-description: Some basic skills to manage linux servers
-math: true
+author = "Will"
+title = "VPS Management Guides"
+date = "2020-09-11"
+description = "Some basic skills to manage linux servers"
 tags = [
     "vps",
     "bash",
